test/typecheck/fail/duplicate_type_id5.sail
struct foo1 = { bar1 : unit }

enum foo1 = Bar2